--- a/.env
+++ b/.env
@@ -1,1 +1,3 @@
 REACT_APP_HOST = 0.0.0.0
+REACT_APP_CHARACTER_URL=https://jumpnet.enjinx.io/eth/asset/50c0000000001151
+REACT_APP_GUN_URL=https://jumpnet.enjinx.io/eth/asset/50c0000000001238
