--- a/package.json
+++ b/package.json
@@ -25,6 +25,7 @@
     "react-toastify": "^9.0.1",
     "react-use-gesture": "^9.1.3",
     "redux": "^4.2.0",
+    "redux-localstorage-simple": "^2.5.1",
     "sass": "^1.50.1",
     "styled-components": "^5.3.5",
     "typescript": "^4.4.2",
