--- a/package.json
+++ b/package.json
@@ -3,33 +3,56 @@
   "version": "0.1.0",
   "private": true,
   "dependencies": {
-    "@reach/dialog": "^0.17.0",
-    "@reduxjs/toolkit": "^1.8.1",
-    "@testing-library/jest-dom": "^5.14.1",
-    "@testing-library/react": "^13.0.0",
-    "@testing-library/user-event": "^13.2.1",
-    "@types/jest": "^27.0.1",
-    "@types/node": "^16.7.13",
-    "@types/react": "^18.0.0",
-    "@types/react-dom": "^18.0.0",
-    "@types/react-redux": "^7.1.24",
-    "@types/styled-components": "^5.1.25",
-    "react": "^18.0.0",
-    "react-device-detect": "^2.2.2",
-    "react-dom": "^18.0.0",
-    "react-redux": "^8.0.1",
-    "react-router": "^6.3.0",
+    "@ethersproject/experimental": "^5.2.0",
+    "@metamask/jazzicon": "^2.0.0",
+    "@reach/dialog": "^0.16.0",
+    "@reduxjs/toolkit": "^1.6.2",
+    "@testing-library/jest-dom": "^5.11.4",
+    "@testing-library/react": "^11.1.0",
+    "@testing-library/user-event": "^12.1.10",
+    "@types/jest": "^26.0.15",
+    "@types/node": "^12.0.0",
+    "@types/react": "^17.0.14",
+    "@types/react-dom": "^18.0.5",
+    "@types/react-icons": "^3.0.0",
+    "@types/react-transition-group": "^4.4.4",
+    "@types/styled-components": "^5.1.14",
+    "@types/styled-system": "^5.1.13",
+    "@web3-react/core": "^6.1.9",
+    "@web3-react/injected-connector": "^6.0.7",
+    "@web3-react/walletconnect-connector": "6.2.4",
+    "@web3-react/walletlink-connector": "^6.2.3",
+    "bignumber.js": "^9.0.1",
+    "ethcall": "^4.1.3",
+    "ethers": "^5.4.1",
+    "jsbi": "^3.2.5",
+    "lodash": "^4.17.21",
+    "polished": "^4.1.3",
+    "react": "^18.1.0",
+    "react-device-detect": "^2.0.1",
+    "react-dom": "^18.1.0",
+    "react-ga": "^3.3.0",
+    "react-hook-form": "^7.18.0",
+    "react-icons": "^4.3.1",
+    "react-redux": "^7.2.5",
+    "react-router": "^5.2.1",
     "react-router-dom": "^6.3.0",
-    "react-scripts": "5.0.1",
+    "react-scripts": "4.0.3",
+    "react-spinners": "^0.11.0",
     "react-spring": "8.0.27",
-    "react-toastify": "^9.0.1",
+    "react-toastify": "^8.0.3",
+    "react-transition-group": "^4.4.2",
     "react-use-gesture": "^9.1.3",
-    "redux": "^4.2.0",
-    "redux-localstorage-simple": "^2.5.1",
-    "sass": "^1.50.1",
-    "styled-components": "^5.3.5",
-    "typescript": "^4.4.2",
-    "web-vitals": "^2.1.0"
+    "react-use-wyre": "^0.3.0-alpha.2",
+    "redux": "^4.1.1",
+    "redux-localstorage-simple": "^2.4.1",
+    "sass": "^1.42.1",
+    "styled-components": "^5.3.1",
+    "styled-system": "^5.1.5",
+    "typescript": "^4.3.5",
+    "uint256": "^1.0.8",
+    "web-vitals": "^1.0.1",
+    "web3": "^1.6.0"
   },
   "scripts": {
     "start": "react-scripts start",
